# RBAC-project

./: Dockerfile  docker-compose.yml  pyproject (2).toml  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  dependencies.py  exceptions.py
app/api/v1/: __init__.py  login.py  send_email.py  users.py
app/core/: config.py  database.py  models.py  security.py  setup.py
app/crud/: crud_base.py  crud_users.py  helper.py
app/models/: token.py  user.py
app/schemas/: __init__.py  users.py
app/templates/: email_templates.html  index.html
